--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "seervicio web con express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon main.js",
+    "test": "jest"
   },
   "keywords": [
     "seervio",
@@ -13,6 +14,12 @@
   "author": "Carol Vallejos",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "servicio-web": "file:"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.1"
   }
 }
